# action

./: README.md  action.yml
.github/: renovate.json5
.github/workflows/: test.yml  update_main_version.yml
updater/: Cargo.toml
updater/src/: main.rs
