[package]
name = "updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.59" , features = ["derive"] }
semver = "1.0.21"
inquire = "0.9.3"
next_version = "0.3.1"
git_cmd = "0.6.28"
serde_yaml = "0.9.33"
